<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<!--    android:layout_marginBottom="55dp"-->

    <!--        用户信息模块 cardview-->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none"


      >

<!--        tools:layout_editor_absoluteY="56dp"-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView

                android:id="@+id/cardViewInfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_marginTop="36dp"

                app:cardCornerRadius="10dp"
                app:cardElevation="2dp">


                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/linearLayout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/imageButton"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:layout_marginTop="15dp"
                        android:contentDescription="@string/user_icon"
                        android:scaleType="centerInside"
                        android:src="@drawable/user_icon"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/text_follow"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/text_follow"
                        app:layout_constraintEnd_toStartOf="@+id/guideline2"
                        app:layout_constraintTop_toTopOf="@+id/guideline4" />

                    <TextView
                        android:id="@+id/text_fans"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/text_fans"
                        app:layout_constraintStart_toStartOf="@+id/guideline3"
                        app:layout_constraintTop_toTopOf="@+id/guideline4" />

                    <androidx.constraintlayout.widget.Guideline
                        android:id="@+id/guideline"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        app:layout_constraintGuide_begin="201dp" />

                    <androidx.constraintlayout.widget.Guideline
                        android:id="@+id/guideline2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        app:layout_constraintGuide_percent="0.4" />

                    <androidx.constraintlayout.widget.Guideline
                        android:id="@+id/guideline3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        app:layout_constraintGuide_percent="0.6" />

                    <androidx.constraintlayout.widget.Guideline
                        android:id="@+id/guideline4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        app:layout_constraintGuide_begin="121dp" />

                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/text_name"
                        app:layout_constraintBottom_toTopOf="@+id/guideline4"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent" />

                    <androidx.constraintlayout.widget.Guideline
                        android:id="@+id/guideline5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        app:layout_constraintGuide_percent="0.8" />

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="@+id/guideline5"

                        >

                        <ImageView
                            android:id="@+id/imageView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="20dp"
                            app:srcCompat="@drawable/ic_card_giftcard_black_24dp"
                            tools:layout_editor_absoluteX="45dp"
                            tools:layout_editor_absoluteY="224dp" />

                        <ImageView
                            android:id="@+id/imageView2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="50dp"
                            app:srcCompat="@drawable/ic_favorite_black_24dp"
                            tools:layout_editor_absoluteX="123dp"
                            tools:layout_editor_absoluteY="224dp" />

                        <ImageView
                            android:id="@+id/imageView3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="50dp"
                            app:srcCompat="@drawable/ic_account_balance_black_24dp"
                            tools:layout_editor_absoluteX="189dp"
                            tools:layout_editor_absoluteY="237dp" />

                        <ImageView
                            android:id="@+id/imageView4"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="50dp"
                            app:srcCompat="@drawable/ic_accessibility_black_24dp"
                            tools:layout_editor_absoluteX="299dp"
                            tools:layout_editor_absoluteY="260dp" />
                    </androidx.appcompat.widget.LinearLayoutCompat>
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="408dp"
                android:layout_margin="5dp"
                app:cardCornerRadius="10dp"
                app:cardElevation="2dp"
                >
                <androidx.recyclerview.widget.RecyclerView

                    android:id="@+id/recycle_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    />

            </androidx.cardview.widget.CardView>

        </LinearLayout>
    </ScrollView>

    <!--    用户购物模块-->


</androidx.constraintlayout.widget.ConstraintLayout>